# stratego-releases

./: README.md
stratego/stratego-0.4.15/rpm/: Makefile  Makefile.am  aterm-0.24-ev.i686.rpm  stratego-0.4.15-ev.i686.rpm
stratego/stratego-0.4.15/rpm/CVS/: Entries  Repository
stratego/stratego-0.4.15/test/control/: Makefile  Makefile.am  congruence-arguments  congruence-arguments.c  congruence-arguments.dep  congruence-arguments.tree1  congruence-thread  congruence-thread.c  congruence-thread.dep  congruence-thread.r  congruence-thread.tree1  identity  identity.c  identity.dep  identity.tree1  match-arity  match-arity.c  match-arity.dep  match-arity.tree1  match-automaton-test  match-automaton-test.c  match-automaton-test.dep  match-automaton-test.r  match-automaton-test.s1  match-automaton-test.s2  match-automaton-test.tree1  thread-test  thread-test.c  thread-test.dep  thread-test.tree1
stratego/stratego-0.4.15/test/syntax/: Makefile  Makefile.am  Makefile.in  as-pattern  as-pattern.c  as-pattern.dep  as-pattern.tree1  mkterm  mkterm.c  mkterm.dep  mkterm.res  mkterm.tree1  mkterm.trm  overlay-test  overlay-test.c  overlay-test.dep  overlay-test.r  overlay-test.tree1  quoted-keywords.dep  xxx
stratego/stratego-0.4.16/: ChangeLog  Makefile  Makefile.in  README  check-dist  config.status  configure.in
stratego/stratego-0.4.16/bench/: Makefile  Makefile.in
stratego/stratego-0.4.16/bench/prop/: Makefile  Makefile.in
stratego/stratego-0.4.16/doc/: Compiler.ps  Library.ps  Makefile  Makefile.in  RefMan.ps  Tutorial.ps  TutorialSlides.half.ps  TutorialSlides.ps  TutorialSlides.quart.ps
stratego/stratego-0.4.16/doc/compiler/: Makefile  Makefile.in  misc.ltx  titlepages.ltx
stratego/stratego-0.4.16/doc/reference/: Makefile  Makefile.in  ack.ltx  body.ltx  doc.ltx  in-short.ltx
stratego/stratego-0.4.16/doc/tutorial/: Makefile  Makefile.am  Makefile.in
stratego/stratego-0.4.16/rpm/: Makefile  Makefile.in
stratego/stratego-0.4.16/share/: Makefile  Makefile.in
stratego/stratego-0.4.16/share/bib/: Makefile  Makefile.in
stratego/stratego-0.4.16/share/emacs/: Makefile  Makefile.in
stratego/stratego-0.4.16/share/tex/: Makefile  Makefile.in  version.ltx
stratego/stratego-0.4.16/spec/: Makefile  Makefile.am  Makefile.in
stratego/stratego-0.4.16/spec/back/: Makefile  Makefile.in  specialized.r
stratego/stratego-0.4.16/spec/form/: Makefile  Makefile.in
stratego/stratego-0.4.16/spec/front/: Makefile  Makefile.am  Makefile.in  frontend.r  normalize-spec.r
stratego/stratego-0.4.16/spec/lib/: Makefile  Makefile.in
stratego/stratego-0.4.16/spec/match/: Makefile  Makefile.in  matching-tree.r
stratego/stratego-0.4.16/spec/opt/: Makefile  Makefile.in
stratego/stratego-0.4.16/spec/post/: Makefile  Makefile.in
stratego/stratego-0.4.16/spec/pp/: Makefile  Makefile.in
stratego/stratego-0.4.16/src/: Makefile  Makefile.am  Makefile.in
stratego/stratego-0.4.16/test/: Makefile  Makefile.in
stratego/stratego-0.4.16/www/: Makefile  Makefile.am  Makefile.in  contents.html  download.html  index.html  publications.html  style.css
stratego/stratego-0.4.16/xmpl/: Makefile  Makefile.in
stratego/stratego-0.4.18/spec/: Makefile.am  Makefile.in
stratego/stratego-0.4.20/: ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README.in  check-dist  configure  configure.in
stratego/stratego-0.4.20/CVS/: Entries
stratego/stratego-0.4.20/doc/: Library.ps  Library2up.ps  Makefile  Makefile.am  TutorialSlides.half.ps  TutorialSlides.ps  TutorialSlides.quart.ps
stratego/stratego-0.4.20/rpm/: aterm.spec
stratego/stratego-0.4.20/share/: Makefile
stratego/stratego-0.4.20/spec/: Makefile
stratego/stratego-0.4.20/test/: Makefile.am  Makefile.in
stratego/stratego-0.4.20/utils/: Makefile
stratego/stratego-0.4.20/www/: Makefile  Makefile.am  contrib.html  download.html  home.html  index.html  mailing-list.html  news.html  publications.html  style.css
stratego/stratego-0.4.20/xmpl/: Makefile.am
stratego/stratego-0.4.21/: CHANGES  ChangeLog  Makefile  Makefile.am  Makefile.in  NOTES  README  check-dist  check-dist.in  config.status  configure  configure.in  distdiff  reconf
stratego/stratego-0.4.21/CVS/: Entries
stratego/stratego-0.4.21/bench/: Makefile
stratego/stratego-0.4.21/doc/: Compiler.ps  Library.ps  Makefile  Makefile.in  Tutorial.ps  TutorialSlides.half.ps  TutorialSlides.ps  TutorialSlides.quart.ps
stratego/stratego-0.4.21/rpm/: Makefile  Makefile.in
stratego/stratego-0.4.21/share/: Makefile  Stratego.Make
stratego/stratego-0.4.21/spec/: Makefile
stratego/stratego-0.4.21/src/: Makefile
stratego/stratego-0.4.21/test/: Makefile  Makefile.am
stratego/stratego-0.4.21/utils/: Makefile  Makefile.in
stratego/stratego-0.4.21/www/: Makefile  Makefile.in  download.html  related.html  stratego.bib
stratego/stratego-0.4.21/xmpl/: Makefile
stratego/stratego-0.5a/spec/: Makefile  Makefile.am  Makefile.in
stratego/stratego-0.5b/: ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.in  TODO  check-dist  config.status  configure  configure.in  dependencies  st-real.dif
stratego/stratego-0.5b/CVS/: Entries
stratego/stratego-0.5b/bench/: Makefile  Makefile.am
stratego/stratego-0.5b/doc/: RefMan.ps  index.html
stratego/stratego-0.5b/experiment/: Makefile  backend  bla.r  closure  closure.c  setjmp.c
stratego/stratego-0.5b/interpreter/: display.r  stratego-eval  stratego-eval.r  stratego-eval.so4  test1.nf  test2.nf  test3.nf  test4.ast  test4.nf  test6.nf
stratego/stratego-0.5b/rpm/: Makefile
stratego/stratego-0.5b/share/: Makefile  Makefile.am
stratego/stratego-0.5b/spec/: Makefile  Makefile.am  Makefile.in
stratego/stratego-0.5b/src/: Makefile
stratego/stratego-0.5b/test/: Makefile  Makefile.am
stratego/stratego-0.5b/www/: Makefile  Makefile.am  Makefile.in  banner.html  configurations.html  contents.html  contrib.html  description.txt  documentation.html  download.html  index.html  publications.html  stratego.bib  sud2-program.html  sud2.html  tiger.html
stratego/stratego-0.5b/xmpl/: Makefile
(+5137 files in other folders)
